WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234274
REGRESSION (
r286936
): Many webstorage layout tests have become flaky failures
https://bugs.webkit.org/show_bug.cgi?id=234274
Summary
REGRESSION (r286936): Many webstorage layout tests have become flaky failures
Ryan Haddad
Reported
2021-12-13 14:33:54 PST
Many webstorage tests have become flaky failures after
https://trac.webkit.org/changeset/286936/webkit
imported/w3c/web-platform-tests/webstorage/event_basic.html imported/w3c/web-platform-tests/webstorage/event_body_attribute.html imported/w3c/web-platform-tests/webstorage/event_no_duplicates.html imported/w3c/web-platform-tests/webstorage/event_session_key.html imported/w3c/web-platform-tests/webstorage/event_session_newvalue.html imported/w3c/web-platform-tests/webstorage/event_session_oldvalue.html imported/w3c/web-platform-tests/webstorage/event_session_removeitem.html imported/w3c/web-platform-tests/webstorage/event_session_storagearea.html imported/w3c/web-platform-tests/webstorage/event_session_url.html imported/w3c/web-platform-tests/webstorage/event_setattribute.html --- /Volumes/Data/worker/catalina-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/webstorage/event_session_key-expected.txt +++ /Volumes/Data/worker/catalina-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/webstorage/event_session_key-actual.txt @@ -1,5 +1,7 @@ event_session_key -PASS key property test of session event - Session event is fired due to an invocation of the setItem(), clear() methods. +Harness Error (TIMEOUT), message = null +TIMEOUT key property test of session event - Session event is fired due to an invocation of the setItem(), clear() methods. Test timed out +
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_body_attribute.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_no_duplicates.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_session_key.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_session_newvalue.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_session_oldvalue.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_session_removeitem.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_session_storagearea.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_session_url.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fevent_setattribute.html&test=storage%2Ffilesystemaccess%2Fsync-access-handle-read-write-worker.html
Attachments
Patch
(2.37 KB, patch)
2021-12-13 16:46 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(2.33 KB, patch)
2021-12-13 16:46 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(6.37 KB, patch)
2021-12-14 09:05 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(4.89 KB, patch)
2021-12-14 13:47 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.92 KB, patch)
2021-12-15 10:43 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.92 KB, patch)
2021-12-15 10:47 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-13 14:34:48 PST
<
rdar://problem/86434478
>
Sihui Liu
Comment 2
2021-12-13 16:46:14 PST
Created
attachment 447085
[details]
Patch
Sihui Liu
Comment 3
2021-12-13 16:46:55 PST
Created
attachment 447086
[details]
Patch
Sihui Liu
Comment 4
2021-12-14 09:05:56 PST
Created
attachment 447137
[details]
Patch
Sihui Liu
Comment 5
2021-12-14 13:47:39 PST
Created
attachment 447154
[details]
Patch
Chris Dumez
Comment 6
2021-12-15 09:40:35 PST
Comment on
attachment 447154
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447154&action=review
> Source/WebKit/NetworkProcess/storage/SessionStorageManager.cpp:102 > + ASSERT(storageArea);
This looks a little risky.
Sihui Liu
Comment 7
2021-12-15 09:47:32 PST
Comment on
attachment 447154
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447154&action=review
>> Source/WebKit/NetworkProcess/storage/SessionStorageManager.cpp:102 >> + ASSERT(storageArea); > > This looks a little risky.
Will change to early return to match old behavior.
Sihui Liu
Comment 8
2021-12-15 10:43:47 PST
Created
attachment 447256
[details]
Patch for landing
Sihui Liu
Comment 9
2021-12-15 10:47:14 PST
Created
attachment 447257
[details]
Patch for landing
EWS
Comment 10
2021-12-15 11:43:52 PST
Committed
r287090
(
245282@main
): <
https://commits.webkit.org/245282@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447257
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug